--- a/index.html
+++ b/index.html
@@ -1579,7 +1579,7 @@
 <p>يتلخص أفضل زيت لتقوية بصيلات الشعر بما يأتي:</p>
 
 <h3>1. زيت جوز الهند</h3>
-
+<div class="separator" style="clear: both; text-align: center;"><a href="http://www.naylou.net" imageanchor="1" style="margin-left: 1em; margin-right: 1em;" target="_blank"><img border="0" data-original-height="1600" data-original-width="1200" height="320" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiInaDfLzU_2BBfc0EGezwNK9t9hAmmytxOtfw4TXmuD3hZHyn3DMJtrriguC74D_-WQXGqDsoiEZrjcAyb3oL2_P4jaVo3qhdynUY-_7B4PkvROZEFoPa4SAvH82GcFOK2h2sLsRDA3-MmvsLty8Zm1LFhyoLma_9sMoXsr3lCOQ2ha1GuuuQs3-dLVfE/s320/7c650774-50f2-428e-9ddb-10b7c6b4c468.jpg" width="240" /></a></div><br />
 <p>يُعد زيت جوز الهند من أفضل الزيوت الخاصة لتقوية بصيلات الشعر والجذور؛ وذلك لأنه غني بالأحماض الدهنية، والمعادن، والكربوهيدرات، والفيتامينات، وهو من الزيوت المناسبة أيضًا لتغذية فروة الرأس والشعر بشكل كامل.</p>
 
 <p>كما أنه يعزز نمو الشعر بشكل صحي، ويبقيه لامعًا، ويزيد نعومته، ويحميه من أضرار الحرارة، ويصلح الأنسجة التالفة في فروة الرأس وحتى نهاياته.﻿&nbsp;</p>
@@ -1617,6 +1617,7 @@
 	<h4>طريقة التحضير والاستخدام</h4>
 	</li>
 </ul>
+<div class="separator" style="clear: both; text-align: center;"><a href="http://www.naylou.net" imageanchor="1" style="margin-left: 1em; margin-right: 1em;" target="_blank"><img border="0" data-original-height="1600" data-original-width="1200" height="320" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiInaDfLzU_2BBfc0EGezwNK9t9hAmmytxOtfw4TXmuD3hZHyn3DMJtrriguC74D_-WQXGqDsoiEZrjcAyb3oL2_P4jaVo3qhdynUY-_7B4PkvROZEFoPa4SAvH82GcFOK2h2sLsRDA3-MmvsLty8Zm1LFhyoLma_9sMoXsr3lCOQ2ha1GuuuQs3-dLVfE/s320/7c650774-50f2-428e-9ddb-10b7c6b4c468.jpg" width="240" /></a></div><br />
 
 <p>تتم بالشكل الآتي:</p>
 
@@ -1660,6 +1661,7 @@
 </ol>
 
 <h3>3. زيت النعناع</h3>
+<div class="separator" style="clear: both; text-align: center;"><a href="http://www.naylou.net" imageanchor="1" style="margin-left: 1em; margin-right: 1em;" target="_blank"><img border="0" data-original-height="1600" data-original-width="1200" height="320" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiInaDfLzU_2BBfc0EGezwNK9t9hAmmytxOtfw4TXmuD3hZHyn3DMJtrriguC74D_-WQXGqDsoiEZrjcAyb3oL2_P4jaVo3qhdynUY-_7B4PkvROZEFoPa4SAvH82GcFOK2h2sLsRDA3-MmvsLty8Zm1LFhyoLma_9sMoXsr3lCOQ2ha1GuuuQs3-dLVfE/s320/7c650774-50f2-428e-9ddb-10b7c6b4c468.jpg" width="240" /></a></div><br />
 
 <p>يُستخدم بالشكل الآتي:﻿&nbsp;</p>
 
